Closed
Bug 47721
Opened 25 years ago
Closed 25 years ago
mozilla-installer creates bogus component.reg
Categories
(SeaMonkey :: Installer, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: cls, Assigned: samir_bugzilla)
References
()
Details
(Whiteboard: [nsbeta2-][nsbeta3+] Mozilla only - take if respin)
Per Leger's mail to m.seamonkey, I attempted to test the M17 candidate. I
downloaded
ftp://sweetlou/products/client/seamonkey/unix/linux/2.2/x86/2000-08-04-14-M17/mozilla-i686-pc-linux-gnu-installer.tar.gz.
I ran the installer as root and installed mozilla into /usr/local/mozilla. When
I tried to run mozilla as my normal user, I got this error:
MOZ_PROGRAM=./mozilla-bin
MOZ_TOOLKIT=
moz_debug=0
moz_debugger=
**************************************************
nsNativeComponentLoader:
GetFactory(/tmp/.tmp.xi.0/bin/components/libxpinstall.so) Load FAILED with
error: <unknown; can't get error from NSPR>
**************************************************
Could not obtain CmdLine processing service
When I removed the component.reg and ran mozilla as root, then I was able to run
it as a normal user. If I try to run mozilla as the normal user after removing
the bogus component.reg, mozilla segfaults because it doesn't have write privs
to that directory.
Running regxpcom instead of mozilla as root also "fixes" component.reg.
If I run regExport (from a custom build) in /usr/local/mozilla, you can see the
xpinstall components that were in used from /tmp.
MOZ_PROGRAM=/opt/cls/moz/main/obj-opt/dist/bin/regExport
MOZ_TOOLKIT=
moz_debug=0
moz_debugger=
Registry <default> opened OK.
nsRegistry::Common
nsRegistry::Common - Profiles
HavePregInfo =
Version =
CurrentProfile = cls
nsRegistry::Common - Profiles - cls
NCHavePregInfo =
NCEmailAddress =
NCServiceDenial =
NCProfileName =
migrated = yes
directory = /home/cls/.mozilla/cls
nsRegistry::Common - software
nsRegistry::Common - software - mozilla
nsRegistry::Common - software - mozilla - xpinstall
Autoreg = no
nsRegistry::Users
Registry <Application Component Registry>
opened OK.
nsRegistry::Common
nsRegistry::Common - software
nsRegistry::Common - software - mozilla
nsRegistry::Common - software - mozilla - XPCOM
VersionString = alpha0.93
nsRegistry::Common - software - mozilla - XPCOM - components
nsRegistry::Common - software - mozilla - XPCOM - components -
abs:%2ftmp%2f.tmp.xi.0%2fbin%2fcomponents%2flibxpinstall.so
FileSize = Bytes
LastModTimeStamp = Bytes
ComponentsCount = Int32 [4, 0x4]
nsRegistry::Common - software - mozilla - XPCOM - components -
abs:%2ftmp%2f.tmp.xi.0%2fbin%2fcomponents%2flibjar50.so
FileSize = Bytes
LastModTimeStamp = Bytes
ComponentsCount = Int32 [2, 0x2]
Putting on [nsbeta2+] radar so we can make a call on this if we respin M17
ssu, can you check this out for mozilla bits please.
Whiteboard: [nsbeta2+] Mozilla only - take if respin
Per today's PDT PR2/M17 bug review. No respin needed. Settting to nsbeta3+ and
reassigning to sgehani per dveditz request.
Assignee: ssu → sgehani
Keywords: nsbeta3
Whiteboard: [nsbeta2+] Mozilla only - take if respin → [nsbeta2-][nsbeta3+] Mozilla only - take if respin
| Assignee | ||
Comment 6•25 years ago
|
||
Fix checked in.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Updated•20 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•