For Unix, create component.reg in cwd, not the specified program dir. [nsbeta3+ b=47721; r=dveditz]